[gd_scene load_steps=12 format=3 uid="uid://cl8hd4fyrtkyh"]

[ext_resource type="Texture2D" uid="uid://dics3kl13aipr" path="res://assets/imagens/Sprout Lands - UI/Sprite sheets/Sprite sheet for Basic Pack.png" id="1_ngjog"]
[ext_resource type="Script" path="res://interface_jogo/interface_padrao/menu_superior.gd" id="2_c10w6"]
[ext_resource type="Script" path="res://interface_jogo/interface_padrao/hotbar.gd" id="4_8sum0"]
[ext_resource type="PackedScene" uid="uid://dujl6ijvm1jas" path="res://interface_jogo/interface_padrao/slot_hotbar/slot_hotbar.tscn" id="5_dnj68"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3gxud"]
texture = ExtResource("1_ngjog")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(677, 134, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5mqda"]
texture = ExtResource("1_ngjog")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(677, 134, 22, 22)
modulate_color = Color(0.768627, 0.603922, 0.423529, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_35mjg"]
texture = ExtResource("1_ngjog")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 6.0
region_rect = Rect2(645, 132, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m3huj"]
texture = ExtResource("1_ngjog")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(869, 102, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_64lj4"]
texture = ExtResource("1_ngjog")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(869, 102, 22, 22)
modulate_color = Color(0.768627, 0.603922, 0.423529, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oismf"]
texture = ExtResource("1_ngjog")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 6.0
region_rect = Rect2(837, 100, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7joi"]
atlas = ExtResource("1_ngjog")
region = Rect2(148, 148, 24, 25)

[node name="InterfacePadrao" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuSuperior" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_c10w6")

[node name="MarginContainer" type="MarginContainer" parent="MenuSuperior"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="HBoxContainer" parent="MenuSuperior/MarginContainer"]
layout_mode = 2

[node name="BotaoGlossario" type="Button" parent="MenuSuperior/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_3gxud")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5mqda")
theme_override_styles/normal = SubResource("StyleBoxTexture_35mjg")

[node name="BotaoFechar" type="Button" parent="MenuSuperior/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_m3huj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_64lj4")
theme_override_styles/normal = SubResource("StyleBoxTexture_oismf")

[node name="Hotbar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_8sum0")

[node name="MarginContainer" type="MarginContainer" parent="Hotbar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -80.0
offset_right = 125.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Fundo" type="NinePatchRect" parent="Hotbar/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_ngjog")
region_rect = Rect2(153, 9, 30, 30)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="Hotbar/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="Hotbar/MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
columns = 6

[node name="Slot1" parent="Hotbar/MarginContainer/MarginContainer/GridContainer" instance=ExtResource("5_dnj68")]
layout_mode = 2

[node name="Slot2" parent="Hotbar/MarginContainer/MarginContainer/GridContainer" instance=ExtResource("5_dnj68")]
layout_mode = 2

[node name="Slot3" parent="Hotbar/MarginContainer/MarginContainer/GridContainer" instance=ExtResource("5_dnj68")]
layout_mode = 2

[node name="Slot4" parent="Hotbar/MarginContainer/MarginContainer/GridContainer" instance=ExtResource("5_dnj68")]
layout_mode = 2

[node name="Slot5" parent="Hotbar/MarginContainer/MarginContainer/GridContainer" instance=ExtResource("5_dnj68")]
layout_mode = 2

[node name="Slot6" parent="Hotbar/MarginContainer/MarginContainer/GridContainer" instance=ExtResource("5_dnj68")]
layout_mode = 2

[node name="Seletor" type="NinePatchRect" parent="Hotbar/MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_d7joi")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[connection signal="visibility_changed" from="." to="Hotbar" method="_ao_mudar_visibilidade_interface_padrao"]
[connection signal="pressed" from="MenuSuperior/MarginContainer/VBoxContainer/BotaoGlossario" to="MenuSuperior" method="_ao_clicar_botao_glossario"]
[connection signal="pressed" from="MenuSuperior/MarginContainer/VBoxContainer/BotaoFechar" to="MenuSuperior" method="_ao_clicar_botao_glossario"]
